fix spacing between movie ratings

--- a/src/component/MovieData/MovieData.scss
+++ b/src/component/MovieData/MovieData.scss
@@ -5,25 +5,22 @@
 .zg-movie-data-container {
   border: none;
   background: none;
+  padding: 0;
+  margin: 0;
 
-  .zg-poster-and-ratings {
-    .zg-movie-poster {
-      margin-top: 10px;
-      height: 400px;
-      width: 270px;
-      border-radius: 4px;
-    }
+  .zg-movie-poster {
+    height: 90%;
+  }
 
-    .zg-movie-title {
-      font-size: 15px;
-      margin: auto;
-      padding: 5px 0;
-      top: 15%;
-      width: 80%;
-      height: 50%;
-      color: white;
-      overflow: hidden;
-    }
+  .zg-movie-title {
+    font-size: 15px;
+    margin: auto;
+    padding: 5px 0;
+    top: 15%;
+    width: 80%;
+    height: 50%;
+    color: white;
+    overflow: hidden;
   }
 }
 
@@ -35,23 +32,31 @@
   align-items: center;
   background: rgba(155, 155, 155, 0.482);
 
-  .zg-modal-poster {
-    margin: 20px;
-    border-radius: 7px;
-    height: 300px;
-    width: 200px;
-  }
+  .zg-poster-and-ratings {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .zg-modal-poster {
+      margin: 20px;
+      border-radius: 7px;
+      height: 300px;
+      width: 200px;
+    }
 
-  .zg-movie-ratings {
-    .zg-movie-rating {
+    .zg-movie-ratings {
       display: flex;
       flex-direction: row;
+      padding: 20px;
+      .zg-movie-rating {
+        display: flex;
+        flex-direction: row;
+      }
     }
-  }
 
-  .zg-cancel-modal {
-    text-align: center;
-    border: none;
+    .zg-cancel-modal {
+      text-align: center;
+      border: none;
+    }
   }
 }
 
@@ -62,6 +67,9 @@
       height: 250px;
       width: 169px;
       border-radius: 4px;
+    }
+
+    .zg-movie-title {
     }
   }
 
